# IVISv

./: .gitignore  README.md  detections.jsonl  export_project_snapshot.py  fix_syntax_indentation.py  ivis_health.py  ivis_logging.py  ivis_metrics.py  ivis_tracing.py  project_snapshot_after_fix3.txt  pyproject.toml  requirements.txt  run_system.original.py  run_system.py  run_system_v1_stage4.py
common/: __init__.py  settings.py
common/config/: __init__.py  base.py
common/contracts/: __init__.py  frame_contract.py
dependencies/: lock.txt
detection/: config.py  main.py  runtime.py
detection/errors/: fatal.py
detection/frame/: decoder.py
detection/ingest/: consumer.py
detection/memory/: reader.py
detection/metrics/: counters.py
detection/model/: base.py  loader.py  runner.py  (+2 more)
docs/: Stage 4 Invariants  Stage 4 Result Contract  architecture.md  baseline_report.md  runbook.md  status_after_p12.md  v1_invariants.md
infrastructure/: bus.py  bus_zmq.py
ingestion/: config.py  heartbeat.py  ipc.py  main.py  runtime.py
ivis/: __init__.py
logs/: bus.out  detection.err  ingestion.err
memory/: config.py  runtime.py  server.py  shm_ring.py
results/: config.py  main.py
scripts/: create_sample_video.py  regression_smoke.py  shm_cleanup.py
tests/: run_for_30s.ps1  smoke_test_full.ps1  stress_shm.py  test_color_standard.py  test_detection_frame_decoder.py  test_e2e_pipeline.py  test_latency_ms.py  test_monotonic_ms.py  test_namespace_imports.py  test_no_silent_excepts.py  test_shm_ring_payload.py
ui/: __init__.py  live_view.py  results_cache.py
(+73 files in other folders)
